--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^5.16.0",
+    "eslint-utils": ">=1.4.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.2",
     "mocha": "^5.2.0",
